--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(/img/bg.jpg);
+    background-image: linear-gradient(to left, #90F7EC, #28C76F), url(../img/bg.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
